# BioCluster-Tool

./: PROJECT_REPORT.md  README.md  cluster.txt  dendrogram_image.txt  main.py  sequence.txt  sequences.txt  test.py
biocluster_test/: COMPLETE_GUIDE.md  MIGRATION_GUIDE.md  NEW_UI_README.md  QUICK_START.md  README.md  SUMMARY.md  pubspec.yaml
biocluster_test/android/app/: build.gradle.kts
biocluster_test/ios/Runner/: Info.plist
biocluster_test/ios/Runner.xcodeproj/: project.pbxproj
biocluster_test/lib/: analysis_page.dart  app_theme.dart  carousel.dart  cluster_page.dart  component.dart  heatmap.dart  main.dart  popup.dart  typewritter.dart  venv.dart
biocluster_test/lib/models/: cluster_result.dart  sequence_model.dart
biocluster_test/lib/screens/: analysis_screen.dart  home_screen.dart  sequence_editor_screen.dart
biocluster_test/lib/services/: api_service.dart  export_service.dart
biocluster_test/lib/utils/: constants.dart  validators.dart
biocluster_test/lib/widgets/: custom_app_bar.dart  custom_buttons.dart  custom_card.dart  file_upload_widget.dart  loading_overlay.dart
biocluster_test/linux/: CMakeLists.txt
biocluster_test/test/: widget_test.dart
biocluster_test/web/: index.html  manifest.json
biocluster_test/windows/: CMakeLists.txt
flask-backend/: main.py  pyproject.toml
flask-backend/routes/: cluster.py  similarity.py
flask-backend/utils/: sequence_tools.py
web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
web/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
(+8 files in other folders)
